--- a/styles.css
+++ b/styles.css
@@ -298,3 +298,17 @@ form button:hover {
     font-size: 16px;
     color: green;
 }
+
+.article-detail {
+    text-align: center;
+    margin: auto;
+}
+
+.article-detail img {
+    max-width: 100%;
+    height: auto;
+}
+
+.article-detail form {
+    margin-top: 20px;
+}
