--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,10 @@ header h1 {
     flex: 1;
     padding: 20px;
     background-color: #f1f1f1;
+    background-image: url(background.png);
+    background-size: cover; /* Couvre toute la section */
+    background-position: center; /* Centre l'image */
+    background-repeat: no-repeat; /* Ne répète pas l'image */
 }
 
 .intro {
